# yasno_for_qa_guru

./: README.md  config.py  pyproject.toml  requirements.txt
helpers/: attaches.py  request.py
pages/: auth_page.py  catalog_page.py  rzhd_page.py
schemas/response/catalog/: search_preset.json  search_presets.json
tests/: api_test.py  auth_api_test.py  conftest.py  filters_test.py  mobile_test.py
tests/api_tests/: api_test.py  conftest.py
tests/mobile_tests/: conftest.py  mobile_test.py
tests/ui_tests/: conftest.py  filters_test.py
